# django-drf-reqlog-celery

./: README.md  pyproject.toml
project/: celery.py  settings.py
project/reqlog_app/: apps.py  tasks.py
