[tool.poetry]
name = "django-drf-reqlog-celery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_drf_reqlog_celery"}]


[tool.poetry.dependencies]
python = "^3.11"
django = "~4.1.7"
celery = {extras = ["redis"], version = "~5.2.7"}
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
